--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.10.0",
     "react-native-svg": "^13.0.0",
+    "react-native-swiper": "^1.6.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
