--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.10.0",
+    "react-native-shadow-2": "^7.0.5",
     "react-native-svg": "^13.0.0",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^8.0.2",
