--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.1.12",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -20,7 +21,6 @@
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^2.0.0",
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.9.1",
