--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.1.12",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/storage": "^15.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -22,6 +24,7 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-gesture-handler": "^2.0.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.2.5",
