--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-date-picker": "^4.2.5",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.0.0",
     "react-native-image-picker": "^4.10.0",
